# mlops_energy_forecasting

feature_pipeline/: README.md  pyproject.toml
feature_pipeline/feature_pipeline/: clean_feature_store.py  feature_view.py  pipeline.py  settings.py  utils.py
feature_pipeline/feature_pipeline/etl/: cleaning.py  extract.py
training_pipeline/: pyproject.toml
training_pipeline/training_pipeline/: settings.py
