[tool.poetry]
name = "training-pipeline"
version = "0.1.0"
description = ""
authors = ["Plouplou37 <quentin.plourdeau@gmail.com>"]
readme = "README.md"
packages = [{include = "training_pipeline"}]

[tool.poetry.dependencies]
python = "~3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
